player fixed on firefox

--- a/src/stylesheets/includes/_media-player.scss
+++ b/src/stylesheets/includes/_media-player.scss
@@ -30,10 +30,11 @@ $seekbar-color: adjust-hue($player-color, 5deg);
     direction: ltr;
     background: rgba($player-color,.90);
     padding: 4px;
+    flex: 0 0 auto;
     color: rgba($white,1);
     display: flex;
     flex-wrap: wrap;
-    align-items: center;
+    align-items: flex-start;
     position: relative;
     top: 0;
     &--is-fade{
@@ -78,7 +79,7 @@ $seekbar-color: adjust-hue($player-color, 5deg);
   &__audiovideo,
   &__languages,
   &__seekbar {
-    height: 100%;
+    height: 40px;
   }
   &__playback-rate,
   &__languages {
@@ -109,7 +110,7 @@ $seekbar-color: adjust-hue($player-color, 5deg);
   &__onscreen {
     &-controls {
       // background:rgba(red,.5);
-      flex: 1 1 auto;
+      flex: 1 0 auto;
       display: flex;
       justify-content: center;
       align-items: center;
